--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "my-qwik-basic-starter",
-  "description": "Demo App with Routing built-in (recommended)",
+  "name": "poke-qwik",
+  "description": "First project with Qwik",
   "engines": {
     "node": ">=15.0.0"
   },
